--- a/src/data/def/number.lang
+++ b/src/data/def/number.lang
@@ -1,37 +1,37 @@
 %define {
 	c-integer {
-		%pattern {
+		%highlight {
 			regex = '(?<![^-+\W])(?:0[xX][0-9a-fA-F]+|[-+]?\d+)[uU]?[lL]?\b'
 			style = "number"
 		}
 	}
 	c-float {
-		%pattern {
+		%highlight {
 			regex = '(?<![^-+\W])(?:0[xX][0-9a-fA-F]+[pP][-+]?\d+[lLfF]?|[-+]?(?:\d*\.)?\d+(?:[eE][-+]?\d+)?[lLfF]?)'
 			style = "number"
 		}
 	}
 
 	java-integer {
-		%pattern {
+		%highlight {
 			regex = '(?<![^-+\W])(?:0[xX][0-9a-fA-F]+|[-+]?\d+)[lL]?\b'
 			style = "number"
 		}
 	}
 	java-float {
-		%pattern {
+		%highlight {
 			regex = '(?<![^-+\W])(?:0[xX][0-9a-fA-F]+[pP][-+]?\d+[dDfF]?|[-+]?(?:\d*\.)?\d+(?:[eE][-+]?\d+)?[dDfF]?)'
 			style = "number"
 		}
 	}
 
 	c-number {
-		%pattern { use = "c-float" }
-		%pattern { use = "c-integer" }
+		%highlight { use = "c-float" }
+		%highlight { use = "c-integer" }
 	}
 
 	java-number {
-		%pattern { use = "java-float" }
-		%pattern { use = "java-integer" }
+		%highlight { use = "java-float" }
+		%highlight { use = "java-integer" }
 	}
 }
