--- a/src/data/def/c-base.lang
+++ b/src/data/def/c-base.lang
@@ -2,19 +2,19 @@
 
 %define {
 	unicode-string-escape {
-		%pattern {
+		%highlight {
 			regex = '\\(?:u[0-9a-fA-F]{4}|U[0-9a-fA-F]{8})'
 			style = "string-escape"
 		}
 	}
 	string-escape {
-		%pattern {
+		%highlight {
 			regex = '\\(?:x[0-9a-fA-F]+|[0-7]{1,3}|.)'
 			style = "string-escape"
 		}
 	}
 	doxygen-keywords {
-		%pattern {
+		%highlight {
 			regex = '[@\\](?:addindex|addtogroup|anchor|arg|attention|' +
 			'author|a|brief|bug|b|callgraph|callergraph|category|class|code|' +
 			'cond|copybrief|copydetails|copydoc|c|date|defgroup|def|deprecated|' +
@@ -33,11 +33,11 @@
 			'verbatim|verbinclude|version|warning|weakgroup|xmlonly|xrefitem)(?!\w)'
 			style = "comment-keyword"
 		}
-		%pattern {
+		%highlight {
 			regex = '[@\\](?:\$|@|\\|&|~|<|>|#|%|\{|\}|")'
 			style = "comment-keyword"
 		}
-		%pattern {
+		%highlight {
 			regex = '[@\\]\w*'
 			style = "error"
 		}
@@ -46,26 +46,26 @@
 	}
 
 	c-comment {
-		%pattern {
+		%highlight {
 			start = '/\*[*!]'
-			%pattern { use = "doxygen-keywords" }
+			%highlight { use = "doxygen-keywords" }
 			end = '\*/'
 			style = "comment"
 		}
-		%pattern {
+		%highlight {
 			start = '/\*'
 			end = '\*/'
 			style = "comment"
 		}
 	}
 	cxx-comment {
-		%pattern {
+		%highlight {
 			start = '//[/!]'
-			%pattern { use = "doxygen-keywords" }
+			%highlight { use = "doxygen-keywords" }
 			end = '(?<!\\)$'
 			style = "comment"
 		}
-		%pattern {
+		%highlight {
 			start = '//'
 			end = '(?<!\\)$'
 			style = "comment"
@@ -75,33 +75,33 @@
 
 	c-base {
 
-		%pattern { use = "c-comment" }
-		%pattern { use = "cxx-comment" }
+		%highlight { use = "c-comment" }
+		%highlight { use = "cxx-comment" }
 
-		%pattern {
+		%highlight {
 			start = '(?:\bL)?"'
-			%pattern { use = "string-escape" }
+			%highlight { use = "string-escape" }
 			end = '"|(?:\G|[^\\])\K$'
 			style = "string"
 		}
 
-		%pattern {
+		%highlight {
 			start = "(?:\bL)?'"
-			%pattern { use = "string-escape" }
+			%highlight { use = "string-escape" }
 			end = "'|(?:\G|[^\\])\K$"
 			style = "string"
 		}
 
-		%pattern {
+		%highlight {
 			start = '^\s*#\s*include'
-			%pattern { use = "c-comment" }
-			%pattern { use = "cxx-comment" }
-			%pattern {
+			%highlight { use = "c-comment" }
+			%highlight { use = "cxx-comment" }
+			%highlight {
 				start = '"'
 				end = '"|(?<!\\)$'
 				style = "string"
 			}
-			%pattern {
+			%highlight {
 				start = '<'
 				end = '>|(?<!\\)$'
 				style = "string"
@@ -110,10 +110,10 @@
 			delim-style = "misc"
 		}
 
-		%pattern { use = "c-integer" }
-		%pattern { use = "c-float" }
+		%highlight { use = "c-integer" }
+		%highlight { use = "c-float" }
 
-		%pattern {
+		%highlight {
 			regex = '^\s*#\s*\w*'
 			style = "misc"
 		}
