--- a/src/data/def/c.lang
+++ b/src/data/def/c.lang
@@ -2,7 +2,7 @@
 
 %define {
 	c-keywords {
-		%pattern {
+		%highlight {
 			regex = '\b(?:auto|break|case|char|const|continue|default|do|double|else|' +
 				'enum|extern|float|for|goto|if|inline|int|long|register|restrict|' +
 				'return|short|signed|sizeof|static|struct|switch|typedef|union|' +
@@ -12,7 +12,7 @@
 	}
 
 	c {
-		%pattern { use = "c-keywords" }
-		%pattern { use = "c-base" }
+		%highlight { use = "c-keywords" }
+		%highlight { use = "c-base" }
 	}
 }
