--- a/src/data/def/java.lang
+++ b/src/data/def/java.lang
@@ -2,14 +2,14 @@
 
 %define {
 	java-escape {
-		%pattern {
+		%highlight {
 			regex = '\\(?:u[0-9a-fA-F]{4}|[0-3][0-7]{2}|[0-7]{1,2}|[btnfr"''\\])'
 			style = "string-escape"
 		}
 	}
 
 	java {
-		%pattern {
+		%highlight {
 			regex = '\b(?:abstract|continue|for|new|switch|assert|default|goto|' +
 				'package|synchronized|boolean|do|if|private|this|break|double|' +
 				'implements|protected|throw|byte|else|import|public|throws|case|' +
@@ -18,20 +18,20 @@
 				'const|float|native|super|while|true|false|null)\b'
 			style = "keyword"
 		}
-		%pattern {
+		%highlight {
 			start = '//'
 			end = '$'
 			style = "comment"
 		}
-		%pattern {
+		%highlight {
 			start = '/\*\*'
-			%pattern {
+			%highlight {
 				regex = '(?:@(?:author|deprecated|exception|param|return|see|serial|' +
 					'serialData|serialField|since|throws|version)|\{@(?:docRoot|' +
 					'inheritDoc))'
 				style = "comment-keyword"
 			}
-			%pattern {
+			%highlight {
 				start = '\{@(?:code|linkplain|link|literal|value)'
 				end = '\}'
 				delim-style = "comment-keyword"
@@ -39,23 +39,23 @@
 			end = '\*/'
 			style = "comment"
 		}
-		%pattern {
+		%highlight {
 			start = '/\*'
 			end = '\*/'
 			style = "comment"
 		}
-		%pattern {
+		%highlight {
 			start = '"'
-			%pattern { use = "java-escape" }
+			%highlight { use = "java-escape" }
 			end = '"|$'
 		}
-		%pattern {
+		%highlight {
 			start = "'"
-			%pattern { use = "java-escape" }
+			%highlight { use = "java-escape" }
 			end = "'|$"
 			style = "string"
 		}
 
-		%pattern { use = "java-number" }
+		%highlight { use = "java-number" }
 	}
 }
