--- a/src/data/def/c-base.lang
+++ b/src/data/def/c-base.lang
@@ -1,18 +1,17 @@
-%include = "def/number.lang"
-
 %define {
-	unicode-string-escape {
+	c-unicode-string-escape {
 		%highlight {
 			regex = '\\(?:u[0-9a-fA-F]{4}|U[0-9a-fA-F]{8})'
 			style = "string-escape"
 		}
 	}
-	string-escape {
+	c-string-escape {
 		%highlight {
 			regex = '\\(?:x[0-9a-fA-F]+|[0-7]{1,3}|.)'
 			style = "string-escape"
 		}
 	}
+
 	doxygen-keywords {
 		%highlight {
 			regex = '[@\\](?:addindex|addtogroup|anchor|arg|attention|' +
@@ -78,20 +77,23 @@
 		%highlight { use = "c-comment" }
 		%highlight { use = "cxx-comment" }
 
+		# String literals
 		%highlight {
 			start = '(?:\bL)?"'
-			%highlight { use = "string-escape" }
+			%highlight { use = "c-string-escape" }
 			end = '"|(?:\G|[^\\])\K$'
 			style = "string"
 		}
 
+		# Character literals
 		%highlight {
 			start = "(?:\bL)?'"
-			%highlight { use = "string-escape" }
+			%highlight { use = "c-string-escape" }
 			end = "'|(?:\G|[^\\])\K$"
 			style = "string"
 		}
 
+		# #include directives
 		%highlight {
 			start = '^\s*#\s*include'
 			%highlight { use = "c-comment" }
@@ -109,13 +111,22 @@
 			end = '(?<!\\)$'
 			delim-style = "misc"
 		}
-
-		%highlight { use = "c-integer" }
-		%highlight { use = "c-float" }
-
+		# Generic preprocessor directive
 		%highlight {
 			regex = '^\s*#\s*\w*'
 			style = "misc"
 		}
+
+		# Integer constants
+		%highlight {
+			regex = '(?<![^-+\W])(?:0[xX][0-9a-fA-F]+|[-+]?\d+)[uU]?[lL]?\b'
+			style = "number"
+		}
+		# Floating point constants
+		%highlight {
+			regex = '(?<![^-+\W])(?:0[xX][0-9a-fA-F]+[pP][-+]?\d+|(?:\d+\.\d*|\.\d+)(?:[eE][-+]?\d+)?|\d+[eE][-+]?\d+)[lLfF]?'
+			style = "number"
+		}
+
 	}
 }
