--- a/src/data/def/sh.lang
+++ b/src/data/def/sh.lang
@@ -101,21 +101,39 @@
 		%highlight { use = "sh-simple-eval" }
 		%highlight { use = "sh-keyword" }
 
-		# Here we run into a limitation of libt3highlight: in principle any word (quoted
-		# and all) may be supplied after the << operator. However, we have to have a
-		# fixed end highlight, which can not refer to the start highlight. So we cant'
-		# have a variable start condition, because we can't end it anymore. Thus,
-		# instead we choose a particular (and obvious) start word, and use that.
-		# Far from perfect, but it will do the job in most cases. To make it slightly
-		# more useful, we use case-insensitive matching, which may in some cases
-		# actually screw up.
+		# For the here-docs, there is one limitation: the shell accepts quotes
+		# anywhere within word as well. This is an uncommon thing to do, so we
+		# let it slide.
 		%highlight {
-			start = '(?i)<<-?EOF'
+			start = '<<\s*(?<delim>\w+)'
+			extract = "delim"
 			%highlight { use = "sh-variable" }
 			%highlight { use = "sh-arithmetic" }
 			%highlight { use = "sh-eval" }
 			%highlight { use = "sh-simple-eval" }
-			end = '^(?i)EOF'
+			end = '^(?&delim)$'
+			style = "string"
+		}
+		%highlight {
+			start = '<<-?\s*(?<delim>\w+)'
+			extract = "delim"
+			%highlight { use = "sh-variable" }
+			%highlight { use = "sh-arithmetic" }
+			%highlight { use = "sh-eval" }
+			%highlight { use = "sh-simple-eval" }
+			end = '^\t*(?&delim)$'
+			style = "string"
+		}
+		%highlight {
+			start = '<<\s*(["''])(?<delim>\w+)\1'
+			extract = "delim"
+			end = '^(?&delim)$'
+			style = "string"
+		}
+		%highlight {
+			start = '<<-?\s*(["''])(?<delim>\w+)\1'
+			extract = "delim"
+			end = '^\t*(?&delim)$'
 			style = "string"
 		}
 	}
