Fix accidentally retained [-+]? in integer declaration for C and java; added perl; fix exit from multiple states

--- a/src/data/def/c-base.lang
+++ b/src/data/def/c-base.lang
@@ -119,7 +119,7 @@
 
 		# Integer constants
 		%highlight {
-			regex = '(?<![^-+\W])(?:0[xX][0-9a-fA-F]+|[-+]?\d+)[uU]?[lL]?\b'
+			regex = '(?<![^-+\W])(?:0[xX][0-9a-fA-F]+|\d+)[uU]?[lL]?\b'
 			style = "number"
 		}
 		# Floating point constants
